v1.4.4.1
- Fix miner ammo dropping lunar ore/ammoboxes dropping post-ML ammo after defeating any mech boss
- Added Call abilities, modders can now use several different commands to enhance compatibility of their mods with Ammobox+

v1.3.3.1
- Add rockets to Ammoboxes

v1.3.3.0
- Rocket update! 13 new rocket types added (special effects only work with Rocket Launcher/Grenade Launcher/Snowman Cannon/Proximity Mine Launcher, Celebration is not included due to programming issues and Electrosphere Launcher is planned in the future. Celebration, Electrosphere Launcher and modded launchers can use the rockets, however they behave just like Rocket III/IV's, and have no special effects)
- Fix ammo dropped from ammoboxes very rarely getting prefixes
- Fix bullet hitboxes

v1.2.2.9 
- Fix possible multiplayer Ice/Slime desync
- Changed ice ammo recipe
- Changed slime ammo recipe
- Nerfed slime slowdown

v1.2.2.7
- Arrow Update! 10 new arrow types added
- Fix cactus dart rarity
- Changed rubber bullet recipe, now requires 10 pink gel (previously 1)
- Reworked cactus shield, should be more reliable now
- Fixed Marked multiplying the multiplier instead of adding onto it
- Reworked drugged status, more visual feedback (?)
- New system for miner ammo, preparation for cross-mod support
- New bullet projectiles, vanilla style
- New light effects for ammo
- Turn down the effects for bullets