@@ -1,4 +1,6 @@
-Rocket update is here! 13 new rocket types added!
+Endless update is here! Infinite versions of all Ammobox ammo types added to the game!
+New feature: Ammo Display - shows ammo that will be used when held weapon is shot!
+Developers of other mods can also add support for their mods to Ammobox+! (For more info, see GitHub repo)
 
 Ammobox+ is a mod that's entirely dedicated to the ranger specialization of Terraria, and adds 43 new ammo types with new effects and their own recipes to the game.
 Currently added ammo types:
@@ -15,6 +17,13 @@ Please report issues on the GitHub issue tracker!
 GitHub: https://github.com/Muzuwi/AmmoboxPlus
 Terraria Forums: https://forums.terraria.org/index.php?threads/ammobox.72004/
 ---------- CHANGELOG ----------
+
+v1.4.4.1 - Endless update! New, infinite versions of all Ammobox ammo types
+	   New UI Element: Ammo Display - Shows ammo that will be shot from held weapon. Off by default - Default hotkey is 'P'
+	   Fix miner ammo dropping lunar ore/ammoboxes dropping post-ML ammo after defeating any mech boss
+	   Added Mod.Call abilities, modders can now use several different commands to enhance compatibility of their mods with Ammobox+
+	   Secret items...?
+	   Minor optimizations
 
 v1.3.3.1 - Add rockets to Ammoboxes
 
