@@ -1,6 +1,10 @@
 v1.4.4.1
 - Fix miner ammo dropping lunar ore/ammoboxes dropping post-ML ammo after defeating any mech boss
 - Added Call abilities, modders can now use several different commands to enhance compatibility of their mods with Ammobox+
+- New UI Element: Ammo Display - Shows ammo that will be shot from held weapon. Off by default - Default hotkey is 'P'
+- Add Ammo Display
+- Add Dev weapons (reskins)
+- Minor optimizations
 
 v1.3.3.1
 - Add rockets to Ammoboxes
